--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1.0, user-scalable=no" />
-  <title>二大爷&宇航</title>
+  <title>土豆&地瓜</title>
   <style>
     * {
       margin: 0;
